--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
 	"name": "gui-toolbox",
 	"displayName": "GUI Toolbox",
 	"description": "Create a GUI for your robot",
+	"publisher": "opensourceleg",
+	"icon": "assets/icon.png",
+	"author": {
+		"name": "Senthur Ayyappan",
+		"email": "senthura@umich.edu",
+		"url": "https://github.com/imsenthur"
+	},
+	"license": "LGPL-2.1-only",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/neurobionics/gui-toolbox"
+	},
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.70.0"
@@ -57,7 +69,7 @@
 	"devDependencies": {
 		"@types/mocha": "^10.0.7",
 		"@types/node": "20.x",
-		"@types/vscode": "^1.91.0",
+		"@types/vscode": "^1.70.0",
 		"@typescript-eslint/eslint-plugin": "^7.14.1",
 		"@typescript-eslint/parser": "^7.11.0",
 		"@vscode/test-cli": "^0.0.9",
